--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,18 @@
 <resources>
     <string name="app_name">Pluse</string>
+    <string name="phone_no">Phone No</string>
+    <string name="password">Password</string>
+    <string name="doctor">Doctor</string>
+    <string name="patient">Patient</string>
+    <string name="title_activity_home">Home</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">Settings</string>
+    <string name="specialization_wise">Specialization wise</string>
+    <string name="location_base">Location base</string>
+    <string name="describe_problem">Describe problem</string>
+    <string name="registration">Registration</string>
+    <string name="forget_password">Forget Password</string>
 </resources>
