--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
     <string name="describe_problem">Describe problem</string>
     <string name="registration">Registration</string>
     <string name="forget_password">Forget Password</string>
+    <string name="name">Name</string>
+    <string name="email">Email</string>
+    <string name="resend_otp">Resend OTP</string>
 </resources>
