--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,12 +10,20 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
-    <string name="specialization_wise">Specialization wise</string>
+    <string name="specialization">Specialization</string>
     <string name="location_base">Location base</string>
     <string name="describe_problem">Describe problem</string>
-    <string name="registration">Registration</string>
+    <string name="reg">Registration</string>
     <string name="forget_password">Forget Password</string>
     <string name="name">Name</string>
     <string name="email">Email</string>
     <string name="resend_otp">Resend OTP</string>
+    <string name="doc_instruction_login">Log in or create an account for patient\'s treatment at your flexible plan</string>
+    <string name="my_pulse">My pulse</string>
+    <string name="patient_instruction">Log in or create My Pluse account to get doctor\'s consultation at your flexibility</string>
+    <string name="ok">ok</string>
+    <string name="sample_string">sdfjlklksdjf</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
