--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,17 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="_30">30%</string>
+    <string name="lbl_disease_symptom">Write down your symptom of the disease</string>
+    <string name="dot">...................................</string>
+    <string name="profile">profile</string>
+    <string name="save">Save</string>
+    <string name="father_name">Father Name</string>
+    <string name="mother_name">Mother Name</string>
+    <string name="present_address">Present Address</string>
+    <string name="health">Health</string>
+    <string name="weight">* Weight</string>
+    <string name="bp">BP (upper/lower)</string>
+    <string name="family_disease_history">Family Disease History</string>
+    <string name="existing_medical_report">Existing Medical Report</string>
 </resources>
