--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
-    <string name="app_name">Pluse</string>
+    <string name="app_name">Pulse</string>
     <string name="phone_no">Phone No</string>
+    <string name="phone_no1">* Phone No</string>
     <string name="password">Password</string>
     <string name="doctor">Doctor</string>
     <string name="patient">Patient</string>
@@ -18,12 +19,12 @@
     <string name="describe_problem">Describe problem</string>
     <string name="reg">Registration</string>
     <string name="forget_password">Forget Password</string>
-    <string name="name">Name</string>
-    <string name="email">Email</string>
+    <string name="name">* Name</string>
+    <string name="email">* Email</string>
     <string name="resend_otp">Resend OTP</string>
     <string name="doc_instruction_login">Log in or create an account for patient\'s treatment at your flexible plan</string>
     <string name="my_pulse">Patient</string>
-    <string name="patient_instruction">Log in or create My Pluse account to get doctor\'s consultation at your flexibility</string>
+    <string name="patient_instruction">Log in or create My Pulse account to get doctor\'s consultation at your flexibility</string>
     <string name="ok">ok</string>
     <string name="sample_string">sdfjlklksdjf</string>
 
@@ -66,5 +67,12 @@
     <string name="last_name">Last Name</string>
     <string name="blood_group">Blood Group</string>
     <string name="nationality">Nationality</string>
+    <string name="age">Age</string>
+    <string name="male">Male</string>
+    <string name="female">Female</string>
+    <string name="terms_N_condition"><![CDATA[Terms & Condition]]></string>
+    <string name="privacyNpolicy">Privacy Policy</string>
+    <string name="otp_info">The system will send you an one time access code as   SMS message to verify provided phone number</string>
+    <string name="lable">By continuing you confirm that you accept our</string>
 
 </resources>
