--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,4 +83,5 @@
     <string name="consultation_charge">Consultation Charge</string>
     <string name="doc_otp_msg">Pulse verification code :</string>
     <string name="reasonLabel">Reason For the Appointment</string>
+    <string name="family_member_profile">Family members Profile</string>
 </resources>
