--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,6 +75,7 @@
     <string name="otp_info">The system will send you an one time password to verify provided phone number</string>
     <string name="lable">By continuing you confirm that you accept our</string>
 
+    <string name="findings">Findings</string>
     <string name="pin_content_desc">PIN input field</string>
     <string name="pin_label_text">PIN</string>
     <string name="login_using_facebook">Login using FaceBook</string>
