--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,4 +100,11 @@
     <string name="sign_in_register_as_string">Sign in / Register as:</string>
     <string name="patient_1_string">Patient</string>
     <string name="doctor_1_string">Doctor</string>
+
+
+    <!--Facebook SDK id-->
+    <string name="facebook_app_id">174854333152076</string>
+    <string name="fb_login_protocol_scheme">fb174854333152076</string>
+
+
 </resources>
