Excel wise update 1

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,8 +103,12 @@
 
 
     <!--Facebook SDK id-->
-    <string name="facebook_app_id">174854333152076</string>
-    <string name="fb_login_protocol_scheme">fb174854333152076</string>
+<!--    <string name="facebook_app_id">174854333152076</string>
+    <string name="fb_login_protocol_scheme">fb174854333152076</string>-->
+    <string name="facebook_app_id">1250062438457138</string>
+    <string name="fb_login_protocol_scheme">fb1250062438457138</string>
+
+
     <string name="prescription">Prescription</string>
 
 
